@@ -19,14 +19,12 @@ package org.openqa.selenium.devtools.v85;
 
 import static java.net.HttpURLConnection.HTTP_OK;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.io.ByteStreams;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.AbstractMap;
+import java.util.ArrayList;
 import java.util.Base64;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -77,7 +75,7 @@ public class V85Network extends Network<AuthRequired, RequestPaused> {
   protected Command<Void> enableFetchForAllPatterns() {
     return Fetch.enable(
         Optional.of(
-            ImmutableList.of(
+            List.of(
                 new RequestPattern(
                     Optional.of("*"), Optional.empty(), Optional.of(RequestStage.REQUEST)),
                 new RequestPattern(
@@ -148,7 +146,7 @@ public class V85Network extends Network<AuthRequired, RequestPaused> {
         bodyIsBase64Encoded = false;
       }
 
-      List<Map.Entry<String, String>> headers = new LinkedList<>();
+      List<Map.Entry<String, String>> headers = new ArrayList<>();
       pausedReq
           .getResponseHeaders()
           .ifPresent(
@@ -192,20 +190,17 @@ public class V85Network extends Network<AuthRequired, RequestPaused> {
   protected Command<Void> continueRequest(RequestPaused pausedReq, HttpRequest req) {
     ByteArrayOutputStream bos = new ByteArrayOutputStream();
     try (InputStream is = req.getContent().get()) {
-      ByteStreams.copy(is, bos);
+      is.transferTo(bos);
     } catch (IOException e) {
       return continueWithoutModification(pausedReq);
     }
 
-    List<HeaderEntry> headers = new LinkedList<>();
-    req.getHeaderNames()
-        .forEach(
-            name ->
-                req.getHeaders(name).forEach(value -> headers.add(new HeaderEntry(name, value))));
+    List<HeaderEntry> headers = new ArrayList<>();
+    req.forEachHeader((name, value) -> headers.add(new HeaderEntry(name, value)));
 
     return Fetch.continueRequest(
         pausedReq.getRequestId(),
-        Optional.empty(),
+        Optional.of(req.getUri()),
         Optional.of(req.getMethod().toString()),
         Optional.of(Base64.getEncoder().encodeToString(bos.toByteArray())),
         Optional.of(headers));
@@ -213,15 +208,12 @@ public class V85Network extends Network<AuthRequired, RequestPaused> {
 
   @Override
   protected Command<Void> fulfillRequest(RequestPaused pausedReq, HttpResponse res) {
-    List<HeaderEntry> headers = new LinkedList<>();
-    res.getHeaderNames()
-        .forEach(
-            name ->
-                res.getHeaders(name).forEach(value -> headers.add(new HeaderEntry(name, value))));
+    List<HeaderEntry> headers = new ArrayList<>();
+    res.forEachHeader((name, value) -> headers.add(new HeaderEntry(name, value)));
 
     ByteArrayOutputStream bos = new ByteArrayOutputStream();
     try (InputStream is = res.getContent().get()) {
-      ByteStreams.copy(is, bos);
+      is.transferTo(bos);
     } catch (IOException e) {
       bos.reset();
     }
